fix broken horizontal scroll in post modal

--- a/app/components/MessageThread.module.css
+++ b/app/components/MessageThread.module.css
@@ -1,5 +1,6 @@
 .messagesContainer {
     position: relative;
+    overflow: hidden;
 }
 
 .messages {
